--- a/index.html
+++ b/index.html
@@ -261,12 +261,13 @@ unicode-range: U+F004-F005,U+F007,U+F017,U+F022,U+F024,U+F02E,U+F03E,U+F044,U+F0
 <ul class="sub-menu">
 	<li id="menu-item-40" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-40"><a href="#">Consortium</a></li>
 	<li id="menu-item-1946" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1946"><a href="#">Insurance</a></li>
-	<li id="menu-item-1947" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1947"><a href="#">Blog</a></li>
+	<li id="menu-item-1947" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1947"><a href="./pages/blog.html">Blog</a></li>
 </ul>
 </li>
 </ul>					
 					<div class="secondary-nav">
-						<a class="phone-number" href="tel:+18008010966">800-801-0966</a><a href="#" class="cta-button login" target="_blank">Login</a>						<a href="#" class="cta-button pricing wp-block-alecan-button has-border-style has-default-color has-dark-hover-color">Prices</a>						<a href="#" class="cta-button nav-bar wp-block-alecan-button has-default-style has-accent-color has-dark-hover-color modal">Get Started</a>					</div>
+						<a class="phone-number" href="tel:+18008010966">800-801-0966</a>
+						<a href="./pages/login.html" class="cta-button login" target="_blank">Login</a>						<a href="#" class="cta-button pricing wp-block-alecan-button has-border-style has-default-color has-dark-hover-color">Prices</a>						<a href="#" class="cta-button nav-bar wp-block-alecan-button has-default-style has-accent-color has-dark-hover-color modal">Get Started</a>					</div>
 
 					<button class="menu-toggle hamburger hamburger--squeeze" type="button" aria-controls="primary-menu" aria-expanded="false">
 						<span class="hamburger-box">
@@ -292,7 +293,7 @@ unicode-range: U+F004-F005,U+F007,U+F017,U+F022,U+F024,U+F02E,U+F03E,U+F044,U+F0
 
 
 
-<a class="wp-block-alecan-button cta-button has-default-style has-accent-color has-dark-hover-color modal" href="#">Enroll Now</a>
+<a class="wp-block-alecan-button cta-button has-default-style has-accent-color has-dark-hover-color modal" href="./pages/fmcsa-enrollment/enrollment1.html">Enroll Now</a>
 </div>
 </header>
 
@@ -640,7 +641,7 @@ thank you again. <i class="fas fa-quote-right fa-3x fa-fw"></i></p><p><span styl
 <li id="menu-item-1514" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1514"><a href="#">Pre Employment Drug Testing</a></li>
 <li id="menu-item-1515" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1515"><a href="#">Random Drug Test</a></li>
 <li id="menu-item-62" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-62"><a href="#">Pricing</a></li>
-<li id="menu-item-60" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-60"><a href="#">Blog</a></li>
+<li id="menu-item-60" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-60"><a href="./pages/blog.html">Blog</a></li>
 <li id="menu-item-61" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-61"><a href="#">Support</a></li>
 <li id="menu-item-1284" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1284"><a href="#">Customer Login</a></li>
 </ul>				</nav><!-- #footer-navigation -->
